--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "karma-spec-reporter": "~0.0.20",
     "lazypipe": "^0.2.4",
     "mocha": "^2.2.5",
+    "node-mongoose-fixtures": "^0.2.4",
     "nodemon": "^1.3.7",
     "open": "~0.0.4",
     "phantomjs-prebuilt": "^2.1.4",
