--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "mime": "^1.3.4",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
+    "multer": "^1.1.0",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
