.net packages added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,62 @@ client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/
 client/packages/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3/
 client/packages/Microsoft.Net.Compilers.1.0.0/
 client/packages/Microsoft.ApplicationInsights.Agent.Intercept.1.2.0/
+client/packages/Microsoft.ApplicationInsights.1.2.3/Microsoft.ApplicationInsights.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.1.2.3/lib/net40/Microsoft.ApplicationInsights.XML
+client/packages/Microsoft.ApplicationInsights.1.2.3/lib/net45/Microsoft.ApplicationInsights.XML
+client/packages/Microsoft.ApplicationInsights.1.2.3/lib/portable-win81+wpa81/Microsoft.ApplicationInsights.XML
+client/packages/Microsoft.ApplicationInsights.1.2.3/lib/wp8/Microsoft.ApplicationInsights.XML
+client/packages/Microsoft.ApplicationInsights.Agent.Intercept.1.2.0/Microsoft.ApplicationInsights.Agent.Intercept.1.2.0.nupkg
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/Microsoft.ApplicationInsights.DependencyCollector.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/content/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/content/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/content/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/lib/net40/Microsoft.AI.DependencyCollector.XML
+client/packages/Microsoft.ApplicationInsights.DependencyCollector.1.2.3/lib/net45/Microsoft.AI.DependencyCollector.XML
+client/packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334.nupkg
+client/packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/content/scripts/ai.0.15.0-build58334.js
+client/packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/content/scripts/ai.0.15.0-build58334.min.js
+client/packages/Microsoft.ApplicationInsights.JavaScript.0.15.0-build58334/tools/prefix.html
+client/packages/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3/content/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3/content/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.PerfCounterCollector.1.2.3/content/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/Microsoft.ApplicationInsights.Web.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net40/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net40/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net40/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net40/web.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net40/web.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net45/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net45/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net45/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net45/web.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/content/net45/web.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/lib/net40/Microsoft.AI.Web.XML
+client/packages/Microsoft.ApplicationInsights.Web.1.2.3/lib/net45/Microsoft.AI.Web.XML
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/Microsoft.ApplicationInsights.WindowsServer.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/Tools/install.ps1
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/content/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/content/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/content/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/lib/net40/Microsoft.AI.WindowsServer.XML
+client/packages/Microsoft.ApplicationInsights.WindowsServer.1.2.3/lib/net45/Microsoft.AI.WindowsServer.XML
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3.nupkg
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/content/ApplicationInsights.config.install.xdt
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/content/ApplicationInsights.config.transform
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/content/ApplicationInsights.config.uninstall.xdt
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/lib/net40/Microsoft.AI.ServerTelemetryChannel.XML
+client/packages/Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel.1.2.3/lib/net45/Microsoft.AI.ServerTelemetryChannel.XML
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0.nupkg
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/build/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/content/web.config.install.xdt
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/content/web.config.uninstall.xdt
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/lib/net45/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/tools/init.ps1
+client/packages/Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0/tools/uninstall.ps1
+client/packages/Microsoft.Net.Compilers.1.0.0/Microsoft.Net.Compilers.1.0.0.nupkg
+client/packages/Microsoft.Net.Compilers.1.0.0/ThirdPartyNotices.rtf
+client/packages/Microsoft.Net.Compilers.1.0.0/build/Microsoft.Net.Compilers.props
+client/packages/Microsoft.Net.Compilers.1.0.0/tools/Microsoft.CSharp.Core.targets
+client/packages/Microsoft.Net.Compilers.1.0.0/tools/Microsoft.VisualBasic.Core.targets
+client/packages/Microsoft.Net.Compilers.1.0.0/tools/VBCSCompiler.exe.config
