--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
+    "cors": "^2.7.1",
     "ejs": "^2.3.3",
     "errorhandler": "^1.4.2",
     "express": "^4.13.3",
@@ -21,6 +22,7 @@
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
     "mime": "^1.3.4",
+    "moment": "^2.13.0",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "multer": "^1.1.0",
