--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.13.3",
     "express-jwt": "^3.0.0",
     "express-session": "^1.11.3",
+    "gridfs-storage-engine": "^0.2.3",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^5.0.0",
     "lodash": "^4.6.1",
