--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-validation-match": "~1.5.2",
     "ngGeolocation": "^0.0.8",
     "ng-file-upload": "^12.0.4",
-    "angular-google-maps": "^2.3.2"
+    "angular-google-maps": "^2.3.2",
+    "angular-recaptcha": "^3.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
