--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "ngGeolocation": "^0.0.8",
     "ng-file-upload": "^12.0.4",
     "angular-google-maps": "^2.3.2",
-    "angular-recaptcha": "^3.0.3"
+    "angular-recaptcha": "^3.0.3",
+    "angular-moment": "^0.10.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
