--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "ng-file-upload": "^12.0.4",
     "angular-google-maps": "^2.3.2",
     "angular-recaptcha": "^3.0.3",
-    "angular-moment": "^0.10.3"
+    "angular-moment": "^0.10.3",
+    "angular-spinner": "^0.8.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
