--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "gulp-watch": "^4.3.5",
     "isparta": "^4.0.0",
     "istanbul": "~0.4.1",
+    "jsdoc": "^3.4.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "~2.1.0",
     "karma": "~0.13.3",
